--- a/DeviceRegistry/RegistryModel/pom.xml
+++ b/DeviceRegistry/RegistryModel/pom.xml
@@ -23,6 +23,15 @@
 		</developer>
 	</developers>
 	
+	<dependencies>
+			<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+	</dependencies>
+	
 	<properties>
 	    <maven.compiler.source>1.8</maven.compiler.source>
 	    <maven.compiler.target>1.8</maven.compiler.target>
