New registry repo submission

--- a/DeviceRegistry/DeviceRegistryRepo/src/main/resources/application.properties
+++ b/DeviceRegistry/DeviceRegistryRepo/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #logging.level.org.h2.server: DEBUG
+server.port = 8090
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
-#spring.datasource.url=jdbc:h2:file:~/h2/registry
-spring.datasource.url=jdbc:h2:mem:registry
+spring.datasource.url=jdbc:h2:file:~/h2/test
+#spring.datasource.url=jdbc:h2:mem:registry
 spring.data.rest.basePath=/api
 spring.datasource.username=sa
 spring.datasource.password=
