Device registry update

--- a/DeviceRegistry/DeviceRegistry/src/main/resources/RegistryRepoClient.properties
+++ b/DeviceRegistry/DeviceRegistry/src/main/resources/RegistryRepoClient.properties
@@ -1,8 +1,8 @@
 default_host = localhost
-default_port = 52399
+default_port = 8090
 root = registry-repo
 DT = DataTopic
-DSD = DataSourceDefinition
-DSM = DataSourceManifest
-DCM = DataConsumerManifest
-DCD = DataChannelDescriptor
+DSD = dsd
+DSM = dsm
+DCM = dcm
+DCD = dcd
