--- a/DeviceRegistry/DeviceRegistry/src/main/resources/RegistryRepoClient.properties
+++ b/DeviceRegistry/DeviceRegistry/src/main/resources/RegistryRepoClient.properties
@@ -1,8 +1,9 @@
 default_host = localhost
-default_port = 8090
+default_port = 8061
 root = registry-repo
 DT = DataTopic
 DSD = dsd
 DSM = dsm
 DCM = dcm
 DCD = dcd
+#registryRepoUri = ${REGISTRY_REPO_ROOT}
