--- a/DeviceRegistry/DeviceRegistry/src/main/resources/application.properties
+++ b/DeviceRegistry/DeviceRegistry/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 #security
 #security.user.name=user
 #security.user.password=password
+server.port=${port:8062}
+registry.repo.uri = ${uri:"localhost:8061"}
+logging.file=\application.log
+logging.level.eu.faredge:DEBUG
