--- a/DeviceRegistry/DeviceRegistryRepo/src/main/resources/application.properties
+++ b/DeviceRegistry/DeviceRegistryRepo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #logging.level.org.h2.server: DEBUG
-server.port = 8090
+server.port=${port:8061}
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
 spring.datasource.url=jdbc:h2:file:~/h2/test
@@ -10,3 +10,14 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+#logging properties
+#logging.level.eu.faredge.edgeInfrastructure.registry:DEBUG
+#logging.level.eu.faredge.edgeInfrastructure.registry.repo.service:INFO
+logging.level.eu.faredge.edgeInfrastructure.registry.repo.controller:DEBUG
+logging.level.eu.faredge:INFO
+#logging.level.org.springframework.web: ERROR
+#logging.level.org.hibernate: ERROR
+#logging.level.org:INFO
+#logging.level: ERROR
+logging.file=\application.log
+#service.registry.url = ${url:"http://localhost:8061"}
