--- a/Clients/dataRoutingClient/src/main/resources/registry.properties
+++ b/Clients/dataRoutingClient/src/main/resources/registry.properties
@@ -1,4 +1,4 @@
-edge.uri =sys://plant/EdgeGateway1
+edge.uri =sys://SmartFactory/EdgeGateway1
 registry = http://localhost:8062/registry/DeviceRegistration
 #registry.ip =localhost
 #registry.port=8080
