--- a/Clients/smartFactoryMqttClient/pom.xml
+++ b/Clients/smartFactoryMqttClient/pom.xml
@@ -8,6 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>smartFactoryMqttClient</name>
 	<description>Registry and Kafka Connector Client for Smart Factory Mqtt </description>
+	<packaging> jar</packaging>
 
 
 	<properties>
@@ -17,6 +18,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	<!-- parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
+		<version>1.5.9.RELEASE</version> </parent -->
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
 		<dependency>
@@ -57,16 +60,78 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
+			<artifactId>slf4j-api</artifactId>
 			<version>1.7.21</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.21</version>
+		</dependency>
+		<!--dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.21</version>
+		</dependency-->
+		<!-- dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency-->
+		<dependency>
 			<groupId>eu.faredge.edgeInfrastructure</groupId>
-  			<artifactId>registryModel</artifactId>
+			<artifactId>registryModel</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>eu.sensap.faredge</groupId>
+			<artifactId>dataRoutingClient</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<!--dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> 
+			<scope>test</scope> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-integration</artifactId> </dependency> <dependency> 
+			<groupId>org.springframework.integration</groupId> <artifactId>spring-integration-stream</artifactId> 
+			</dependency> <dependency> <groupId>org.springframework.integration</groupId> 
+			<artifactId>spring-integration-mqtt</artifactId> </dependency -->
+		<dependency>
+			<groupId>org.fusesource.mqtt-client</groupId>
+			<artifactId>mqtt-client</artifactId>
+			<version>1.14</version>
+		</dependency>
 	</dependencies>
+	
+		
+	<build>
+	<plugins>
+	<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-assembly-plugin</artifactId>
+    <executions>
+      <execution>
+         <goals>
+           <goal>attached</goal>
+         </goals>
+<phase>package</phase>
+         <configuration>
+           <descriptorRefs>
+             <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>eu.sensap.farEdge.dataRoutingClient.smartFactory.mqttClient.program.Program</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+     </execution>
+  </executions>
+</plugin>
+	</plugins>
+	</build>
 
+	<!--build> <plugins> <plugin> <groupId>org.springframework.boot</groupId> 
+		<artifactId>spring-boot-maven-plugin</artifactId> </plugin> </plugins> </build -->
+		
 
 
 </project>
