--- a/Clients/smartFactoryMqttClient/.project
+++ b/Clients/smartFactoryMqttClient/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>smartFactoryMqttClient</name>
+	<name>MqttClient</name>
 	<comment></comment>
 	<projects>
 	</projects>
