--- a/Clients/genericDataRouteClient/.project
+++ b/Clients/genericDataRouteClient/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>genericDataRoutingClient</name>
+	<name>OP-UAClient</name>
 	<comment></comment>
 	<projects>
 	</projects>
